用 cdn 引入 element-ui ，但是对齐的分离不彻底

--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,17 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title><%= htmlWebpackPlugin.options.title %></title>
     <% if(htmlWebpackPlugin.options.isProd){ %>
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
-    <script src="https://unpkg.com/nprogress@0.2.0/nprogress.js"></script>
     <link
       rel="stylesheet"
       href="https://unpkg.com/nprogress@0.2.0/nprogress.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/element-ui/lib/theme-chalk/index.css"
+    />
+    <script src="https://unpkg.com/nprogress@0.2.0/nprogress.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
+    <script src="https://unpkg.com/element-ui/lib/index.js"></script>
     <% } %>
   </head>
   <body>
