--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     />
     <script src="https://unpkg.com/nprogress@0.2.0/nprogress.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
-    <script src="https://unpkg.com/element-ui/lib/index.js"></script>
+    <script src="https://unpkg.com/element-ui@2.14.0/lib/index.js"></script>
     <% } %>
     <script src="https://cdn.bootcdn.net/ajax/libs/echarts/4.9.0-rc.1/echarts.common.min.js"></script>
   </head>
